--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,6 @@
+lang: en-US
 encoding: UTF-8
 theme: jekyll-theme-slate
+google_analytics: UA-68974771-4
+title: CryptoMañana Framework Documentation | CryptoMananaDocs
+description: Documentation of the CryptoMañana (CryptoManana) Framework.
