Added the framework log as a preview image for sharing purposes.

--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,4 @@ theme: jekyll-theme-slate
 google_analytics: UA-68974771-4
 title: CryptoMañana Framework Documentation | CryptoMananaDocs
 description: Documentation of the CryptoMañana (CryptoManana) Framework.
+image: /images/CryptoMananaLogo.jpg
