Updated the title and the description for SEO reasons.

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ google_site_verification: k0F_FeRng289L43NHAIyA-tSQDd4CmgqPSPNnTvweng
 
 author: Tony Karavasilev
 title: CryptoMañana Documentation
-description: Documentation of the CryptoMañana (CryptoManana) Framework
+description: The Object-Oriented PHP Cryptography Framework
 image: /images/CryptoMananaLogo.jpg
 logo: /images/CryptoMananaLogo.jpg
 favicon: /favicon.ico
