Updated the documentation website's design, added new components and enabled redirects for i18n support.

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,14 @@ defaults:
     values:
       image: /images/CryptoMananaLogo.jpg
 
+github:
+  is_project_page: false
+
+sass:
+  style: compressed
+
 plugins:
   - jekyll-seo-tag
+  - jekyll-redirect-from
 
 exclude: [README.md]
