Made a few SEO improvements and changed the layout of the home page.

--- a/_config.yml
+++ b/_config.yml
@@ -40,4 +40,6 @@ plugins:
   - jekyll-seo-tag
   - jekyll-redirect-from
 
-exclude: [README.md]
+timezone: UTC
+
+exclude: [README.md, CHANGELOG.md, LICENSE, CNAME, Gemfile, Gemfile.lock]
