--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,6 @@
 * text working-tree-encoding=UTF-8
+*.jpg -text
+*.png -text
 /.github export-ignore
 /.gitignore export-ignore
 /.gitattributes export-ignore
