--- a/_data/navigation_en.yml
+++ b/_data/navigation_en.yml
@@ -21,9 +21,15 @@ menu_entries:
     url: /docs/core
   - title: Cryptography Model Extension
     url: /docs/model-extension-examples
-  - title: Project Integration Examples
-    url: /docs/integration-examples
-  - title: Project Comman Use Cases
+  - title: Comman Use Cases
     url: /docs/use-case-examples
   - title: Miscellaneous Usages
     url: /docs/miscellaneous-examples
+  - title: Project Integration Examples
+    url: /docs/integration-examples
+  - title: Migration Notes
+    url: /docs/migration-steps
+  - title: Cybersecurity Best Practices
+    url: /docs/best-practices
+  - title: Technical API
+    url: /docs/technical-api
