Migrated to the newest Google Analytics major release.

--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,7 @@ lang: en-US
 encoding: UTF-8
 theme: jekyll-theme-slate
 
-google_analytics: UA-68974771-4
-google_site_verification: k0F_FeRng289L43NHAIyA-tSQDd4CmgqPSPNnTvweng
+google_analytics: G-GRYPSRSK91
 
 author: Tony Karavasilev
 title: CryptoMañana Documentation
